--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SplashScreen"
-    android:background="@drawable/splash_screen">
+    android:background="@drawable/splash_screen"
+    android:fitsSystemWindows="true">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
