--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/activity_main"
-    android:fitsSystemWindows="true"
-    android:background="@color/white_flat">
+    android:fitsSystemWindows="true" >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_destinations"
