--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green_light">#00C39C</color>
     <color name="white_flat">#F0F0F0</color>
+    <color name="black_flat">#292929</color>
+    <color name="dark_ui">#5c5c5c</color>
 </resources>
