Adding About Page, Adjusting the Activity Tittles

--- a/app/src/main/res/layout/activity_detail_page.xml
+++ b/app/src/main/res/layout/activity_detail_page.xml
@@ -53,7 +53,7 @@
             android:layout_height="64dp"
             android:text="@string/add_to_favorite"
             android:background="@color/btn_second"
-            android:textColor="@color/black_flat"/>
+            android:textColor="@color/white_flat"/>
 
         <Button
             android:id="@+id/btn_share"
@@ -62,7 +62,7 @@
             android:layout_height="64dp"
             android:text="@string/share"
             android:background="@color/green_light"
-            android:textColor="@color/black_flat"/>
+            android:textColor="@color/white_flat"/>
 
     </LinearLayout>
 
