--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="green_light">#00C39C</color>
+    <color name="green_light">#26A69A</color>
     <color name="white_flat">#F0F0F0</color>
     <color name="black_flat">#292929</color>
     <color name="dark_ui">#5c5c5c</color>
